<resources>
    <string name="app_name">Group4_SQlite</string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="name">Name</string>
    <string name="student_number">Student Number:</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact">Contact</string>
    <string name="update_data">Update Data</string>
    <string name="insert_new_data">Insert New Data</string>
</resources>
