<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#E91E63"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_details_below"
        android:textSize="30sp"
        android:textColor="#FFFF"
        android:layout_marginTop="20dp"
        android:gravity="center"
         />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:textSize="23sp"
        android:textColor="#231A1A"
        android:layout_below="@+id/title1"
        android:inputType="text"/>

    <EditText
        android:id="@+id/studNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/student_number"
        android:textSize="23sp"
        android:textColor="#231A1A"
        android:layout_below="@+id/name"
        android:inputType="text"/>
    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/contact"
        android:textSize="23sp"
        android:textColor="#231A1A"
        android:layout_below="@+id/studNo"
        android:inputType="number"/>
    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/date_of_birth"
        android:textSize="23sp"
        android:textColor="#231A1A"
        android:layout_below="@+id/contact"
        android:inputType="date"/>
    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/insert_new_data"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/dob"
        />
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/update_data"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btnInsert"
        />
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="Delete The Existing Data"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:layout_below="@+id/btnUpdate"
        />
    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="View Data"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btnDelete"
        />
</RelativeLayout>